
Known bugs     - all fixed now
    
version 0.6.9 -  currently available as daily snapshot
  - add pyOperator, the ultimate hybrid operator, this will considerably simplify many
    coomplicated tasks 
  - start to convert all test cases to PyUnit. This means better test cases and more
    thorough testing. I expect that code 0.7.0 is a version with much less bugs due to
    this change. 

version 0.6.8 - Sep 21st, 2005
  - fix a reporting bug in simuCDCV.py
  - support sex chromosome and sex chromosome related mating, recombination issues.
      -- sexChrom() in population::population(), 
      -- stop recombination between XY of male individual
      -- determine sex in random mating by sex chromosome
  - add parameters atPloidy, sex to initializers. Now, you can 
    initialize individuals at ploidy level and control assignment of sex.
    Now, with so many options, these initializers are overly complicated.
  - add support for sex-specific recombination rate. (parameter maleIntensity,
    maleRate, and maleAfterLoci.)
  - modify some features of simuComplexDisease.py
  - release 0.6.8 and set up daily snapshots 

version 0.6.7 - Aug, 1st, 2005
  - Add help() infor for the function version of operators and member functions.
  - use Walker's alias algorithm for weighted sampling. Random mating with 
    selection should be only slightly slower than without selection. The performance
    of simuCDCV.py increased by 15% using this algorithm. This method will use
    a lot of RAM when population size is large (8*N bytes).
  - add compiler info to Welcome message. (to see if it matches that of Python.)
  - change the use of logfile in simuCDCV.py 
  - fix a bug in operator InitByFreq.

version 0.6.6 - various GUI / wxPython improvements. Not released.
  - add wxGetParam. Will be used when wxPython is available.
  - add wxPython version of listVars. Much better than the text version (when wxPython is available)
  - add some demographic functions in simuUtil.py